Wacky footer section last-child bug on ie8 and below fixed.

--- a/css/style.css
+++ b/css/style.css
@@ -370,7 +370,7 @@ text-shadow : 1px 1px 1px rgba(255,255,255,1);
 -moz-box-shadow : inset 0 0 10px rgba(40,40,40,0.1);
 -webkit-box-shadow : inset 0 0 10px rgba(40,40,40,0.1);
 box-shadow : inset 0 0 10px rgba(40,40,40,0.1);
-border : 1px solid #E9E9E9; }
+border : 1px solid #D5D5D5; }
 
 div[role="main"] a:active{
 background : #D4D4D4;
@@ -378,7 +378,7 @@ text-shadow : 1px 1px 1px rgba(255,255,255,1);
 -moz-box-shadow : inset 0 0 10px rgba(40,40,40,0.1);
 -webkit-box-shadow : inset 0 0 10px rgba(40,40,40,0.1);
 box-shadow : inset 0 0 10px rgba(40,40,40,0.2);
-border : 1px solid #D4D4D4; }
+border : 1px solid #B2B2B2; }
 
 .archive a.more {
 text-align : center;
